--- a/src/ResultsContainer/ResultsContainer.css
+++ b/src/ResultsContainer/ResultsContainer.css
@@ -8,7 +8,7 @@
   box-shadow: 0 4px 10px rgba(0, 0, 0, 0.1);
   width: 90%;
   max-width: 500px;
-  margin: 2rem auto;
+  /* margin: 2rem auto; */
 	height: 50vh
 }
 
